fix: update CORS allowedOriginPatterns to wildcard for localtunnel/ngrok compatibility